# ci_cd

./: .coverage  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/actions/setup/: action.yaml
.github/workflows/: ci_pipeline.yaml  code_quality.yaml  git_pipeline.yaml  github_pipeline.yaml
app/: main.py
tests/: test_main.py
