[project]
name = "ci-cd-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic",
    "httpx",
    "uvicorn[standard]",
    "pytest",
    "fastapi",
    "fastapi-cli[standard]",
    "pytest-cov",
    "coverage[toml]",
    "black",
    "ruff",
    "bandit",
    "semgrep"
]

[project.scripts]
fastapi = { extras = ["cli"] }

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
show_missing = true

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[dependency-groups]
dev = [
    "pyright>=1.1.402",
    "pytest>=8.4.1",
]
